fix alignment of sidebar and content by no margin for the first child h3 widget title (#302)

--- a/wp-content/themes/aaf/style.css
+++ b/wp-content/themes/aaf/style.css
@@ -299,6 +299,10 @@ html, body {
 	color: #fff;
 }
 
+.widget .widget-title:first-child
+
+{margin-top: 0;}
+
 	.widget > div {
 		padding-right: .5rem;
 	}
